--- a/index.html
+++ b/index.html
@@ -1,1 +1,366 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!--css link-->
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Reem+Kufi:wght@400..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+</head>
+<body>
+    <header>
+        <a href="#" class="logo"><img src="logo.png"></a>
+        <ul class="navmenu">
+            
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Page</a></li>
+            <li><a href="#">Docs</a></li>
+            <li><a href="form.html">form</a></li>
+            <li><a href="Login.html">Login</a></li>
+        </ul>
+        <div class="nav-icon">
+            <a href="#"><i class='bx bx-search'></i></a>
+            <a href="#"><i class='bx bx-user'></i></a>
+            <a href="#"><i class='bx bx-cart'></i></a>
 
+            <div class="bx bx-menu" id="menu-icon"></div>
+        </div>
+
+    </header>
+    <section class="main-home">
+        <div class="main-text">
+            <h5>Winter Collection</h5>
+            <h1>New Winter <br> Collection 2024</h1>
+            <p>There is Nothing Like Trend</p>
+
+            <a href="#" class="main-btn">Shop Now <i class='bx bx-right-arrow-alt'></i></a>
+        </div>
+        <div class="down-arrow">
+            <a href="#trending" class="down"><i class='bx bx-down-arrow-alt'></i></a>
+        </div>
+    </section>
+    <!--trending-products-section-->
+    <section class="trending-product" id="trending">
+        <div class="center-text">
+            <h2>Our Trending <span>Products</span></h2>
+        </div>
+        <div class="products">
+            <div class="row">
+                <img src="1.jpg">
+                <div class="product-text">
+                    <h5>Sale</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Half Running Set</h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="2.jpg">
+                <div class="product-text">
+                    <h5>New</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Formal Men Lowers </h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="3 (1).jpg">
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Half Running Suit</h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="4 (1).jpg">
+                <div class="product-text">
+                    <h5>Hot</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Half Fancy Lady Dress</h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="5 (1).jpg">
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Flix Flox Jeans</h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="6 (1).jpg">
+                <div class="product-text">
+                    <h5>Hot</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Fancy Salwar Suits</h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="7 (1).jpg">
+                <div class="product-text">
+                    <h5>Sale</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Printed Straight Kurta</h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="8.jpg">
+                <div class="product-text">
+                    <h5>Sale</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <div class="price">
+                    <h4>Collot Full Dress</h4>
+                    <p>$99 - $129</p>
+                </div>
+            </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- client-review-section -->
+     <section class="client-reviews">
+        <div class="reviews">
+            <h3>Client Reviews</h3>
+            <img src="client.jpg" alt="">
+            <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document.<br> You can use these galleries to insert tables, headers, footers, lists, cover pages, and other document building blocks. When you create pictures, charts, or diagrams, they also coordinate with your current document look.</p>
+            <h2>Mark Jevenue</h2>
+            <p>Ceo Of Addle</p>
+        </div>
+     </section>
+     <!-- update-new-section -->
+      <section class="update-news">
+        <div class="up-center-text">
+            <h2>New Update</h2>
+        </div>
+        <div class="update-cart">
+            <div class="cart">
+                <img src="bl-1.png" alt="">
+                <h5>1st Nov 2024</h5>
+                <h4>Let's Start Bring Sale On This Summer Vacation.</h4>
+                <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. </p>
+                <h6>Continue Reading..</h6>
+            </div>
+            <div class="cart">
+                <img src="bl-2.png" alt="">
+                <h5>1st Nov 2024</h5>
+                <h4>Let's Start Bring Sale On This Summer Vacation.</h4>
+                <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. </p>
+                <h6>Continue Reading..</h6>
+            </div>
+            <div class="cart">
+                <img src="bl-3.png" alt="">
+                <h5>1st Nov 2024</h5>
+                <h4>Let's Start Bring Sale On This Summer Vacation.</h4>
+                <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. </p>
+                <h6>Continue Reading..</h6>
+            </div>
+        </div>
+      </section>
+   
+       <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        .footer {
+            background-color: #333;
+            color: #fff;
+            padding: 40px 0;
+            display: flex;
+            justify-content: space-around;
+            text-align: left;
+        }
+        .footer-col {
+            flex: 1;
+            padding: 0 20px;
+        }
+        .footer-col h3 {
+            font-size: 18px;
+            margin-bottom: 15px;
+        }
+        .footer-col ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .footer-col ul li {
+            margin-bottom: 10px;
+        }
+        .footer-col ul li a {
+            color: #ccc;
+            text-decoration: none;
+        }
+        .footer-col ul li a:hover {
+            color: #fff;
+        }
+        .footer-bottom {
+            background-color: #222;
+            color: #999;
+            text-align: center;
+            padding: 10px;
+            font-size: 14px;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Footer Start -->
+    <footer>
+        <div class="footer">
+            <div class="footer-col">
+                <h3>About Us</h3>
+                <p>3245 Grant Street Longview,<br> Tx United Kingdom 765378</p>
+                <p>03030200040</p>
+                <p>abcd@gmail.com</p>
+                <ul>
+                   <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-twitter'></i></a>
+                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-youtube'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Support</h3>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">About Page</a></li>
+                    <li><a href="#">Size Guide</a></li>
+                    <li><a href="#">Shopping & Returns</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Shop</h3>
+                <ul>
+                    <li><a href="#">Men's Shopping</a></li>
+                    <li><a href="#">Women's Shopping</a></li>
+                    <li><a href="#">Kid's Shopping</a></li>
+                    <li><a href="#">Furniture</a></li>
+                    <li><a href="#">Discount</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Company</h3>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Affiliate</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Subscribe</h3>
+                <ul>
+                    <li><a href="#">Recieves updates,Hot deals,Discount sent straight Into your inbox daily</a></li>
+                    <li><a href="#">On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document.</a></li>
+                    <li><a href="#">Recieves updates,Hot deals,Discount sent straight Into your inbox daily</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; 2024 YourCompany. All rights reserved.
+        </div>
+    </footer>
+    <!-- Footer End -->
+
+
+       
+    <script src="java.js"></script>
+</body>
+</html>
