--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="logo.png"></a>
+        <a href="#" class="logo"><img src="img/logo.png"></a>
         <ul class="navmenu">
             
             <li><a href="#">Home</a></li>
@@ -54,7 +54,7 @@
         </div>
         <div class="products">
             <div class="row">
-                <img src="1.jpg">
+                <img src="img/1.jpg">
                 <div class="product-text">
                     <h5>Sale</h5>
                 </div>
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="row">
-                <img src="2.jpg">
+                <img src="img/2.jpg">
                 <div class="product-text">
                     <h5>New</h5>
                 </div>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="row">
-                <img src="3 (1).jpg">
+                <img src="img/3 (1).jpg">
                 <div class="heart-icon">
                     <i class='bx bx-heart'></i>
                 </div>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="row">
-                <img src="4 (1).jpg">
+                <img src="img/4 (1).jpg">
                 <div class="product-text">
                     <h5>Hot</h5>
                 </div>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="row">
-                <img src="5 (1).jpg">
+                <img src="img/5 (1).jpg">
                 <div class="heart-icon">
                     <i class='bx bx-heart'></i>
                 </div>
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="row">
-                <img src="6 (1).jpg">
+                <img src="img/6 (1).jpg">
                 <div class="product-text">
                     <h5>Hot</h5>
                 </div>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="row">
-                <img src="7 (1).jpg">
+                <img src="img/7 (1).jpg">
                 <div class="product-text">
                     <h5>Sale</h5>
                 </div>
@@ -188,7 +188,7 @@
                 </div>
             </div>
             <div class="row">
-                <img src="8.jpg">
+                <img src="img/8.jpg">
                 <div class="product-text">
                     <h5>Sale</h5>
                 </div>
@@ -215,7 +215,7 @@
      <section class="client-reviews">
         <div class="reviews">
             <h3>Client Reviews</h3>
-            <img src="client.jpg" alt="">
+            <img src="img/client.jpg" alt="">
             <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document.<br> You can use these galleries to insert tables, headers, footers, lists, cover pages, and other document building blocks. When you create pictures, charts, or diagrams, they also coordinate with your current document look.</p>
             <h2>Mark Jevenue</h2>
             <p>Ceo Of Addle</p>
@@ -228,21 +228,21 @@
         </div>
         <div class="update-cart">
             <div class="cart">
-                <img src="bl-1.png" alt="">
+                <img src="img/bl-1.png" alt="">
                 <h5>1st Nov 2024</h5>
                 <h4>Let's Start Bring Sale On This Summer Vacation.</h4>
                 <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. </p>
                 <h6>Continue Reading..</h6>
             </div>
             <div class="cart">
-                <img src="bl-2.png" alt="">
+                <img src="img/bl-2.png" alt="">
                 <h5>1st Nov 2024</h5>
                 <h4>Let's Start Bring Sale On This Summer Vacation.</h4>
                 <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. </p>
                 <h6>Continue Reading..</h6>
             </div>
             <div class="cart">
-                <img src="bl-3.png" alt="">
+                <img src="img/bl-3.png" alt="">
                 <h5>1st Nov 2024</h5>
                 <h4>Let's Start Bring Sale On This Summer Vacation.</h4>
                 <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. </p>
